Updated to new recipe json format for melting and soliding